--- a/runbooks/yaml/Linux Administration/Start_a_Service.yaml
+++ b/runbooks/yaml/Linux Administration/Start_a_Service.yaml
@@ -1,14 +1,14 @@
 - defaultTab: output
-  description: Check a Linux service status and stop if it's up.
+  description: Check a Linux service status and start if it's down.
   executionEnabled: true
   group: Administration/Linux
-  id: 3448b21a-b287-453d-9b2d-bd1cf7d100e5
+  id: acc2844d-28be-4cf4-9420-ca9b139ee537
   loglevel: INFO
-  name: Stop a Service
+  name: Start a Service
   nodeFilterEditable: true
   nodefilters:
     dispatch:
-      excludePrecedence: true
+      excludePrecedence: false
       keepgoing: true
       rankOrder: ascending
       successOnEmptyNodeFilter: false
@@ -17,7 +17,7 @@
   nodesSelectedByDefault: true
   options:
   - enforced: true
-    label: Linux service
+    label: Linux Service
     name: service
     required: true
     value: nginx
@@ -48,16 +48,16 @@
           echo "status=stopped"
         fi
       scriptInterpreter: /bin/bash
-    - description: Print the current service status
+    - description: Print the service current status
       exec: echo "the ${option.service} service is ${data.status}"
-    - description: Stop the service if is stopped
+    - description: Start the service if is stopped
       fileExtension: .sh
       interpreterArgsQuoted: false
-      script: "# stop the service if the stauts is \"running\"\nif [ @data.status@\
-        \ = 'running' ]; then\n    echo \"starting @option.service@...\"\n\tsudo /etc/init.d/nginx\
-        \ stop\nelse\n    echo \"System is active, nothing to do.\"\nfi\n\n# all done.\n\
-        echo \"Done.\""
+      script: "# start the service if the stauts is \"stopped\"\nif [ @data.status@\
+        \ = 'stopped' ]; then\n    echo \"starting @option.service@...\"\n\tsudo /etc/init.d/nginx\
+        \ start\nelse\n    echo \"System is inactive, nothing to do.\"\nfi\n\n# all\
+        \ done.\necho \"Done.\"\n"
       scriptInterpreter: /bin/bash
     keepgoing: true
     strategy: node-first
-  uuid: 3448b21a-b287-453d-9b2d-bd1cf7d100e5
+  uuid: acc2844d-28be-4cf4-9420-ca9b139ee537
