--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,16 +3,16 @@ FROM node:12.20.1
 RUN  apt-get update && apt-get upgrade -y -qq && \
      apt-get install -y -qq --no-install-recommends wget git curl jq
 
-RUN mkdir /rundeck-cli /scripts
+RUN mkdir /rundeck-cli
 COPY rundeck-cli /rundeck-cli
 COPY project /rundeck-cli/projects
 COPY import.yml /rundeck-cli
 
-COPY scripts /scripts
-RUN chmod +x /scripts/init.sh
-
 WORKDIR /rundeck-cli
+
+COPY scripts ./scripts
+RUN chmod +x ./scripts/init.sh
 
 RUN npm install
 
-CMD /scripts/init.sh
+CMD ./scripts/init.sh
