--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build:
           context: rundeck
           args:
-            RUNDECK_IMAGE: ${RUNDECK_IMAGE:-rundeck/rundeck:3.3.10}
+            RUNDECK_IMAGE: ${RUNDECK_IMAGE:-rundeck/rundeck:SNAPSHOT}
         links:
           - mysql
         environment:
