--- a/node-demo/Dockerfile
+++ b/node-demo/Dockerfile
@@ -6,3 +6,8 @@ FROM rundeck/node-demo
 # with
 # build:
 #   context: node-demo
+
+COPY wait_for_key.sh  /usr/local/sbin/wait_for_key
+RUN chmod +x /usr/local/sbin/wait_for_key
+
+CMD /usr/local/sbin/wait_for_key && /usr/local/sbin/rdeck_ssh_start
