--- a/rundeck/Dockerfile
+++ b/rundeck/Dockerfile
@@ -4,7 +4,8 @@ FROM ${RUNDECK_IMAGE}
 RUN  sudo apt-get update && \
      sudo apt-get install -y -qq --no-install-recommends wget git curl jq iputils-ping sysstat
 
+RUN ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa <<< y
+
 COPY --chown=rundeck:root data/resources.yml /home/rundeck
 COPY data/realm.properties /home/rundeck/server/config
-COPY data/linux_id_rsa /home/rundeck
 COPY data/plugins/. /home/rundeck/libext
