--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 ## Set pro options if applicable
-RUNDECK_IMAGE=rundeck/rundeck:4.4.0
+RUNDECK_IMAGE=rundeck/rundeck:4.8.0
+RUNDECK_USER=admin
+RUNDECK_PASSWORD=admin
