use cli builder image

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 ## Set pro options if applicable
-RUNDECK_IMAGE=rundeck/rundeck:4.9.0
+RUNDECK_IMAGE=rundeck/rundeck:4.10.1
 RUNDECK_USER=admin
 RUNDECK_PASSWORD=admin
+
+BUILD_DEV_IMAGE=rundeckpro/env-builder:latest
