--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,16 +35,19 @@ services:
       container_name: client
       build:
         context: client
+        args:
+          BUILD_DEV_IMAGE: ${BUILD_DEV_IMAGE:-rundeckpro/env-builder:latest}
       environment:
-        CONFIG_FILE: import.yml
+        CONFIG_FILE: /app/data/import.yml
+        CONFIG_FILES_PATH: /app/data
         RUNDECK_URL: http://rundeck:4440
-        RUNDECK_API_URL: http://localhost:4440
-        RUNDECK_TOKEN: u5gJoKU3NpS6IC4lFmPQFfDkUlZnQOXp
+        RUNDECK_API_URL: http://rundeck:4440
         RUNDECK_USER: ${RUNDECK_USER:-admin}
         RUNDECK_PASSWORD: ${RUNDECK_PASSWORD:-admin}
+        # generate key for nodes
+        KEY_PATH: /app/data/keys
       volumes:
-        - shared-volume:/rundeck-cli/data/keys/
-        - ./data/user.aclpolicy:/rundeck-cli/data/user.aclpolicy
+        - shared-volume:/app/data/keys/
     node:
       container_name: node1
       build:
@@ -53,9 +56,9 @@ services:
          - "22"
       environment:
         - SSHD_PORT=22
-        - KEY_FILE=/configuration/id_rsa
+        - KEY_PATH=/app/data
       volumes:
-        - shared-volume:/configuration/
+        - shared-volume:/app/data/
     node2:
       container_name: node2
       build:
@@ -64,9 +67,9 @@ services:
          - "22"
       environment:
         - SSHD_PORT=22
-        - KEY_FILE=/configuration/id_rsa
+        - KEY_PATH=/app/data
       volumes:
-        - shared-volume:/configuration/
+        - shared-volume:/app/data/
     ciao:
         container_name: ciao
         image: brotandgames/ciao
