--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,14 @@
-FROM node:12.20.1
+ARG BUILD_DEV_IMAGE
+FROM ${BUILD_DEV_IMAGE}
 
-RUN  apt-get update && apt-get upgrade -y -qq && \
-     apt-get install -y -qq --no-install-recommends wget git curl jq
+RUN mkdir -p /app/data
+COPY acls /app/data/acls/
+COPY projects /app/data/projects/
+COPY import.yml /app/data/import.yml
 
-RUN mkdir /rundeck-cli
-COPY rundeck-cli /rundeck-cli
-COPY project /rundeck-cli/projects
-COPY import.yml /rundeck-cli
+COPY create-key.sh ./scripts/create-key.sh
 
-WORKDIR /rundeck-cli
+RUN ls -lrt ./scripts
+RUN chmod +x ./scripts/create-key.sh
 
-COPY scripts ./scripts
-RUN chmod +x ./scripts/init.sh
-
-RUN npm install
-
-CMD ./scripts/init.sh
+CMD ./scripts/create-key.sh
