use container dependencies use replicas in nodes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 services:
     rundeck:
         container_name: rundeck
@@ -19,6 +19,13 @@ services:
             RUNDECK_FEATURE_UINEXT_ENABLED: 'true'
         ports:
           - 4440:4440
+        healthcheck:
+          test: curl -f http://localhost:4440 || exit 1
+          interval: 30s
+          timeout: 10s
+          retries: 5
+          start_period: 180s
+          start_interval: 10s
     mysql:
         container_name: mysql
         image: mysql:8
@@ -46,10 +53,16 @@ services:
         RUNDECK_PASSWORD: ${RUNDECK_PASSWORD:-admin}
         # generate key for nodes
         KEY_PATH: /app/data/keys
+      links:
+        - rundeck
+      depends_on:
+        rundeck:
+          condition: service_healthy
       volumes:
         - shared-volume:/app/data/keys/
     node:
-      container_name: node1
+      deploy:
+        replicas: 2
       build:
         context: node-demo
       ports:
@@ -57,19 +70,14 @@ services:
       environment:
         - SSHD_PORT=22
         - KEY_PATH=/app/data
+      links:
+        - client
+      depends_on:
+        client:
+          condition: service_completed_successfully
       volumes:
         - shared-volume:/app/data/
-    node2:
-      container_name: node2
-      build:
-        context: node-demo
-      ports:
-         - "22"
-      environment:
-        - SSHD_PORT=22
-        - KEY_PATH=/app/data
-      volumes:
-        - shared-volume:/app/data/
+
     ciao:
         container_name: ciao
         image: brotandgames/ciao
